# zevis

./: .env  .gitignore  Cargo.toml  FRONTEND.md  README.md  build-notifications.bat  build-react.bat  build-react.sh  build-yew.bat  build-yew.sh  docker-compose.yml  seed_data.sql
migrations/: 001_initial.sql  002_add_password_hash.sql
public/: index.html  yew-ws-notifications-1ca0ec2f56701991.js  yew-ws-notifications-1ca0ec2f56701991_bg.wasm  yew-ws-notifications-60ae7f1e0934d4de.js  yew-ws-notifications-60ae7f1e0934d4de_bg.wasm  yew-ws-notifications-7ca9f98198b7daf9.js  yew-ws-notifications-7ca9f98198b7daf9_bg.wasm  yew-ws-notifications-b3afb23c3a35661e.js  yew-ws-notifications-b3afb23c3a35661e_bg.wasm
react-ws/: README.md  package-lock.json  package.json
react-ws/public/: index.html
react-ws/src/: App.tsx
react-ws/src/components/: NotificationApp.css  NotificationApp.tsx  NotificationItem.tsx
react-ws/src/hooks/: useWebSocket.ts
react-ws/src/types/: notifications.ts
src/: auth.rs  config.rs  database.rs  errors.rs  handlers.rs  lib.rs  main.rs  main_backup.rs  middleware.rs  models.rs  repositories.rs  services.rs  websocket.rs
src/handlers/: auth.rs  mod.rs
static/: index.html
yew-ws/: Cargo.toml  README.md  Trunk.toml  index.html
yew-ws/src/: app.rs  lib.rs  main.rs  models.rs  websocket.rs
