[package]
name = "zevis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenv = "0.15"
thiserror = "2.0"
async-trait = "0.1"

# Auth & security
jsonwebtoken = "9"
headers = "0.4"
dashmap = "5"
once_cell = "1.19"
bcrypt = "0.15"

# Validation dependencies
validator = { version = "0.18", features = ["derive"] }
garde = { version = "0.20", features = ["derive", "email"] }
