[package]
name = "zevis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenv = "0.15"
thiserror = "2.0"
async-trait = "0.1"
# JWT and authentication
jsonwebtoken = "9.2"
# CORS and rate limiting
tower_governor = "0.7.0"
# Password hashing
bcrypt = "0.17.0"
