[package]
name = "yew-ws-notifications"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["std"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.11", features = ["timers"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
log = "0.4"
console_log = "1.0"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
